Update some legacy Collections calls to return immutable objects for Java 11+ build.