@@ -24,7 +24,6 @@
 package com.github.alexdlaird.ngrok.process;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 
@@ -162,6 +161,6 @@ public class NgrokLog extends HashMap<String, String> {
             tokens.add(current.toString());
         }
 
-        return Collections.unmodifiableList(tokens);
+        return List.of(tokens.toArray(new String[]{}));
     }
 }
